// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard — snapshots matches snapshot when authenticated with full user data 1`] = `
<DocumentFragment>
  <div
    class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-vertical ant-space-gap-row-large ant-space-gap-col-large"
    style="width: 100%;"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-start ant-space-gap-row-small ant-space-gap-col-small"
          >
            <div
              class="ant-space-item"
            >
              <span
                aria-label="user"
                class="anticon anticon-user"
                role="img"
                style="font-size: 32px; color: rgb(22, 119, 255);"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <div>
                <h4
                  class="ant-typography css-dev-only-do-not-override-mncuj7"
                  style="margin-bottom: 4px;"
                >
                  Welcome back, Test User 👋
                </h4>
                <div
                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-mncuj7"
                  style="margin-bottom: 8px;"
                >
                  test.user@company.com
                </div>
                <span
                  class="ant-tag ant-tag-blue css-dev-only-do-not-override-mncuj7"
                >
                  Everyone
                </span>
                <span
                  class="ant-tag ant-tag-blue css-dev-only-do-not-override-mncuj7"
                >
                  Testers
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-row css-dev-only-do-not-override-mncuj7"
        style="margin-left: -8px; margin-right: -8px; row-gap: 16px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Total Records
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(22, 119, 255);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="team"
                      class="anticon anticon-team"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="team"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M824.2 699.9a301.55 301.55 0 00-86.4-60.4C783.1 602.8 812 546.8 812 484c0-110.8-92.4-201.7-203.2-200-109.1 1.7-197 90.6-197 200 0 62.8 29 118.8 74.2 155.5a300.95 300.95 0 00-86.4 60.4C345 754.6 314 826.8 312 903.8a8 8 0 008 8.2h56c4.3 0 7.9-3.4 8-7.7 1.9-58 25.4-112.3 66.7-153.5A226.62 226.62 0 01612 684c60.9 0 118.2 23.7 161.3 66.8C814.5 792 838 846.3 840 904.3c.1 4.3 3.7 7.7 8 7.7h56a8 8 0 008-8.2c-2-77-33-149.2-87.8-203.9zM612 612c-34.2 0-66.4-13.3-90.5-37.5a126.86 126.86 0 01-37.5-91.8c.3-32.8 13.4-64.5 36.3-88 24-24.6 56.1-38.3 90.4-38.7 33.9-.3 66.8 12.9 91 36.6 24.8 24.3 38.4 56.8 38.4 91.4 0 34.2-13.3 66.3-37.5 90.5A127.3 127.3 0 01612 612zM361.5 510.4c-.9-8.7-1.4-17.5-1.4-26.4 0-15.9 1.5-31.4 4.3-46.5.7-3.6-1.2-7.3-4.5-8.8-13.6-6.1-26.1-14.5-36.9-25.1a127.54 127.54 0 01-38.7-95.4c.9-32.1 13.8-62.6 36.3-85.6 24.7-25.3 57.9-39.1 93.2-38.7 31.9.3 62.7 12.6 86 34.4 7.9 7.4 14.7 15.6 20.4 24.4 2 3.1 5.9 4.4 9.3 3.2 17.6-6.1 36.2-10.4 55.3-12.4 5.6-.6 8.8-6.6 6.3-11.6-32.5-64.3-98.9-108.7-175.7-109.9-110.9-1.7-203.3 89.2-203.3 199.9 0 62.8 28.9 118.8 74.2 155.5-31.8 14.7-61.1 35-86.5 60.4-54.8 54.7-85.8 126.9-87.8 204a8 8 0 008 8.2h56.1c4.3 0 7.9-3.4 8-7.7 1.9-58 25.4-112.3 66.7-153.5 29.4-29.4 65.4-49.8 104.7-59.7 3.9-1 6.5-4.7 6-8.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1,284
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Active
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(82, 196, 26);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="check-circle"
                      class="anticon anticon-check-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="check-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1,102
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Pending
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(250, 173, 20);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="clock-circle"
                      class="anticon anticon-clock-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="clock-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      87
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Inactive
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(255, 77, 79);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="user"
                      class="anticon anticon-user"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="user"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      95
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        <h5
          class="ant-typography css-dev-only-do-not-override-mncuj7"
          style="margin-bottom: 12px;"
        >
          Quick Links
        </h5>
        <div
          class="ant-row css-dev-only-do-not-override-mncuj7"
          style="margin-left: -8px; margin-right: -8px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-8 css-dev-only-do-not-override-mncuj7"
            style="padding-left: 8px; padding-right: 8px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-mncuj7"
              style="cursor: pointer;"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-start ant-space-gap-row-small ant-space-gap-col-small"
                >
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="search"
                      class="anticon anticon-search"
                      role="img"
                      style="font-size: 28px; color: rgb(22, 119, 255);"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      <span
                        class="ant-typography css-dev-only-do-not-override-mncuj7"
                      >
                        <strong>
                          Search Records
                        </strong>
                      </span>
                      <div
                        class="ant-typography ant-typography-secondary css-dev-only-do-not-override-mncuj7"
                        style="margin-bottom: 0px; margin-top: 4px;"
                      >
                        Filter records by name, email, department, status, or address.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Session Information
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-typography css-dev-only-do-not-override-mncuj7"
          >
            <strong>
              Subject (sub):
            </strong>
             test-sub-001
          </div>
          <div
            class="ant-typography css-dev-only-do-not-override-mncuj7"
          >
            <strong>
              Email:
            </strong>
             test.user@company.com
          </div>
          <div
            class="ant-typography css-dev-only-do-not-override-mncuj7"
            style="margin-bottom: 0px;"
          >
            <strong>
              Groups:
            </strong>
             Everyone, Testers
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dashboard — snapshots matches snapshot when user is null (unauthenticated) 1`] = `
<DocumentFragment>
  <div
    class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-vertical ant-space-gap-row-large ant-space-gap-col-large"
    style="width: 100%;"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-start ant-space-gap-row-small ant-space-gap-col-small"
          >
            <div
              class="ant-space-item"
            >
              <span
                aria-label="user"
                class="anticon anticon-user"
                role="img"
                style="font-size: 32px; color: rgb(22, 119, 255);"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <div>
                <h4
                  class="ant-typography css-dev-only-do-not-override-mncuj7"
                  style="margin-bottom: 4px;"
                >
                  Welcome back, User 👋
                </h4>
                <div
                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-mncuj7"
                  style="margin-bottom: 8px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-row css-dev-only-do-not-override-mncuj7"
        style="margin-left: -8px; margin-right: -8px; row-gap: 16px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Total Records
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(22, 119, 255);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="team"
                      class="anticon anticon-team"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="team"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M824.2 699.9a301.55 301.55 0 00-86.4-60.4C783.1 602.8 812 546.8 812 484c0-110.8-92.4-201.7-203.2-200-109.1 1.7-197 90.6-197 200 0 62.8 29 118.8 74.2 155.5a300.95 300.95 0 00-86.4 60.4C345 754.6 314 826.8 312 903.8a8 8 0 008 8.2h56c4.3 0 7.9-3.4 8-7.7 1.9-58 25.4-112.3 66.7-153.5A226.62 226.62 0 01612 684c60.9 0 118.2 23.7 161.3 66.8C814.5 792 838 846.3 840 904.3c.1 4.3 3.7 7.7 8 7.7h56a8 8 0 008-8.2c-2-77-33-149.2-87.8-203.9zM612 612c-34.2 0-66.4-13.3-90.5-37.5a126.86 126.86 0 01-37.5-91.8c.3-32.8 13.4-64.5 36.3-88 24-24.6 56.1-38.3 90.4-38.7 33.9-.3 66.8 12.9 91 36.6 24.8 24.3 38.4 56.8 38.4 91.4 0 34.2-13.3 66.3-37.5 90.5A127.3 127.3 0 01612 612zM361.5 510.4c-.9-8.7-1.4-17.5-1.4-26.4 0-15.9 1.5-31.4 4.3-46.5.7-3.6-1.2-7.3-4.5-8.8-13.6-6.1-26.1-14.5-36.9-25.1a127.54 127.54 0 01-38.7-95.4c.9-32.1 13.8-62.6 36.3-85.6 24.7-25.3 57.9-39.1 93.2-38.7 31.9.3 62.7 12.6 86 34.4 7.9 7.4 14.7 15.6 20.4 24.4 2 3.1 5.9 4.4 9.3 3.2 17.6-6.1 36.2-10.4 55.3-12.4 5.6-.6 8.8-6.6 6.3-11.6-32.5-64.3-98.9-108.7-175.7-109.9-110.9-1.7-203.3 89.2-203.3 199.9 0 62.8 28.9 118.8 74.2 155.5-31.8 14.7-61.1 35-86.5 60.4-54.8 54.7-85.8 126.9-87.8 204a8 8 0 008 8.2h56.1c4.3 0 7.9-3.4 8-7.7 1.9-58 25.4-112.3 66.7-153.5 29.4-29.4 65.4-49.8 104.7-59.7 3.9-1 6.5-4.7 6-8.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1,284
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Active
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(82, 196, 26);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="check-circle"
                      class="anticon anticon-check-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="check-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1,102
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Pending
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(250, 173, 20);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="clock-circle"
                      class="anticon anticon-clock-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="clock-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      87
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-6 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-statistic css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-statistic-title"
                >
                  Inactive
                </div>
                <div
                  class="ant-statistic-content"
                  style="color: rgb(255, 77, 79);"
                >
                  <span
                    class="ant-statistic-content-prefix"
                  >
                    <span
                      aria-label="user"
                      class="anticon anticon-user"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="user"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      95
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        <h5
          class="ant-typography css-dev-only-do-not-override-mncuj7"
          style="margin-bottom: 12px;"
        >
          Quick Links
        </h5>
        <div
          class="ant-row css-dev-only-do-not-override-mncuj7"
          style="margin-left: -8px; margin-right: -8px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-lg-8 css-dev-only-do-not-override-mncuj7"
            style="padding-left: 8px; padding-right: 8px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-mncuj7"
              style="cursor: pointer;"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-start ant-space-gap-row-small ant-space-gap-col-small"
                >
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="search"
                      class="anticon anticon-search"
                      role="img"
                      style="font-size: 28px; color: rgb(22, 119, 255);"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      <span
                        class="ant-typography css-dev-only-do-not-override-mncuj7"
                      >
                        <strong>
                          Search Records
                        </strong>
                      </span>
                      <div
                        class="ant-typography ant-typography-secondary css-dev-only-do-not-override-mncuj7"
                        style="margin-bottom: 0px; margin-top: 4px;"
                      >
                        Filter records by name, email, department, status, or address.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Session Information
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-typography css-dev-only-do-not-override-mncuj7"
          >
            <strong>
              Subject (sub):
            </strong>
             —
          </div>
          <div
            class="ant-typography css-dev-only-do-not-override-mncuj7"
          >
            <strong>
              Email:
            </strong>
             —
          </div>
          <div
            class="ant-typography css-dev-only-do-not-override-mncuj7"
            style="margin-bottom: 0px;"
          >
            <strong>
              Groups:
            </strong>
             No groups assigned
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
